@@ -1,74 +1,59 @@
 package by.ita.je.controllers;
 
 import by.ita.je.dto.TVDto;
-import by.ita.je.mappers.TVMapper;
+import by.ita.je.mappers.TVMapperToDto;
 import by.ita.je.models.TV;
 import by.ita.je.services.TVService;
 import org.springframework.web.bind.annotation.*;
-import java.math.BigDecimal;
-import java.time.ZonedDateTime;
+
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(path = "/tv")
 public class TVController {
 
     private final TVService tvService;
-    private final TVMapper tvMapper;
+    private final TVMapperToDto tvMapper;
 
-    public TVController(TVService tvService, TVMapper tvMapper) {
+    public TVController(TVService tvService, TVMapperToDto tvMapper) {
         this.tvService = tvService;
         this.tvMapper = tvMapper;
     }
 
 
     @PostMapping("/create")
-    public TVDto create(){
-        TV tv = TV.builder()
-                .number(6)
-                .type("TV")
-                .brand("LG")
-                .discount(true)
-                .diagonal(15)
-                .price(BigDecimal.valueOf(1000.5))
-                .energy('A')
-                .registered(ZonedDateTime.now())
-                .build();
-        TV tvNew = tvService.insertTV(tv);
+    public TVDto create() {
+        TV tvNew = tvService.insertTV();
         return tvMapper.toDTO(tvNew);
     }
 
     @GetMapping("/read")
-    public TVDto read(@RequestParam Integer number){
+    public TVDto read(@RequestParam Integer number) {
         return tvMapper.toDTO(tvService.findTVByNumber(number));
     }
 
     @GetMapping("/read/all")
-    public List<TVDto> readAll(){
-        return tvService.readALL().stream().map(tvMapper::toDTO).toList();
+    public List<TVDto> readAll() {
+        return tvService.readALL().stream().map(tvMapper::toDTO).collect(Collectors.toList());
     }
 
     @PutMapping("/update")
-    public TVDto update(@RequestParam Integer number){
+    public TVDto update(@RequestParam Integer number) {
         TV tv = tvService.findTVByNumber(number);
-        if (tv == null){
+        if (tv == null) {
             return null;
         }
-
-        tv.setBrand("Philips");
-        tv.setDiagonal(42);
-        tv.setPrice(BigDecimal.valueOf(7000.01));
-
         return tvMapper.toDTO(tvService.updateTV(tv));
     }
 
     @DeleteMapping("/delete")
-    public TVDto delete(@RequestParam Integer number){
+    public TVDto delete(@RequestParam Integer number) {
         return tvMapper.toDTO(tvService.deleteTV(number));
     }
 
     @DeleteMapping("/delete/all")
-    public void deleteAll(){
+    public void deleteAll() {
         tvService.deleteAll();
     }
 }
